--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1 {
 
 .home {
   background-color: white;
-  background-image: url('../images/logo_original.png');
+  background-image: url('../images/logo.png');
   background-position: center;
   background-repeat: no-repeat;
 }
