--- a/layout.twig
+++ b/layout.twig
@@ -7,22 +7,26 @@
     <meta name="keywords" content="anthillsolutions, anthill, solutions, wsn, wireless sensor networks, wireless, sensor, networks">
     <meta name="description" content="anthillsolutions website">
     <meta name="author" content="anthillsolutions">
-    <title>anthillsolutions</title>
+    <title>{{ app.config.get('general/sitename') }}</title>
     <link rel="icon" href="favicon.png">
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="{{paths.theme}}css/bootstrap.min.css">
+    <link rel="stylesheet" href="{{paths.theme}}css/style.css">
+    <script src="https://use.fontawesome.com/e100ab6618.js"></script>
   </head>
 
   <body>
+    {% block body %}
     <header class="home text-center">
       <div class="vertical-align">
         <h1>anthill<strong>solutions</strong></h1>
       </div>
       <div class="bottom-align">
         © 2014 - 2016 anthill<span class="bold">solutions</span> •
-        <a href="mailto:info@anthillsolutions.ch">contact</a>
+        <a href="mailto:info@anthillsolutions.ch">contact<i class="fa fa-envelope-o" aria-hidden="true"></i>
+        </a>
       </div>
     </header>
+    {% endblock body %}
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
